fix title on detail view to be.. visible

--- a/css/user/detail.scss
+++ b/css/user/detail.scss
@@ -9,7 +9,7 @@
   width: 90%;
   max-width: 500px;
   min-width: 290px;
-  margin: 0 auto;
+  margin: 65px auto;
   padding-top: 5px;
 }
 
